# Ask-My-Pdf-MCP

./: .env.example  .gitignore  EVAL_DATASET_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml
scripts/: backfill_pages.py  ingest_all.py  smoke_test.py
src/pdf_qa/: __main__.py  config.py  manifest.py  prompts.py  server.py
src/pdf_qa/ingest/: chunker.py  embed.py  pdf_extract.py  pipeline.py
src/pdf_qa/llm/: __init__.py  base.py  bedrock.py  ollama.py
src/pdf_qa/store/: client.py  schema.py  search.py
src/pdf_qa/tools/: __init__.py  _state.py  count.py  ingest.py  keyword.py  list_docs.py  metadata.py  query.py
tests/: conftest.py  test_chunker.py  test_pdf_extract.py  test_query_smoke.py
